<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>
    
  <groupId>br.com.wagnersoft</groupId>
  <artifactId>babilonia</artifactId>
  <version>1.0.0-alpha</version>

  <name>br.com.wagnersoft.babilonia</name>
  <description>Rest Web Service for Brazilian InfoGeo</description>
  <inceptionYear>2026</inceptionYear>
  <url>https://wagnerlopes.github.io/babilonia/index.html</url>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>4.1.0</version>
  </parent>

  <dependencies>
    
    <dependency>
      <groupId>org.springdoc</groupId>
        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
        <version>3.0.3</version>
    </dependency>
    
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-jdbc</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    
    <dependency>
      <groupId>jakarta.validation</groupId>
      <artifactId>jakarta.validation-api</artifactId>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
    </dependency>

    <dependency>
      <groupId>io.jsonwebtoken</groupId>
      <artifactId>jjwt</artifactId>
      <version>0.13.0</version>
    </dependency>

    <dependency>
      <groupId>org.apache.pdfbox</groupId>
      <artifactId>pdfbox</artifactId>
      <version>3.0.8</version>
      <exclusions>
        <exclusion>
          <groupId>commons-logging</groupId>
          <artifactId>commons-logging</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi</artifactId>
      <version>5.5.1</version>
      <scope>compile</scope>
    </dependency>

    <!-- TESTE -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-webmvc-test</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.reflections</groupId>
      <artifactId>reflections</artifactId>
      <version>0.10.2</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
    </dependency>

    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-launcher</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <build>

    <plugins>

      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <executions>
          <execution>
             <goals>
               <goal>build-info</goal>
             </goals>
          </execution>
        </executions>        
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <release>21</release>
          <source>21</source>
          <target>21</target>
          <fork>true</fork>
          <parameters>true</parameters>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <skipTests>false</skipTests>
          <!-- O @{argLine} é crucial aqui! Ele junta os argumentos do JaCoCo com os seus customizados -->
          <argLine>
            @{argLine} -XX:+EnableDynamicAgentLoading
          </argLine>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>3.6.0</version>
        <configuration>
          <configLocation>checkstyle.xml</configLocation>
          <failOnViolation>false</failOnViolation>
          <outputDirectory>${project.build.directory}/site/checkstyle</outputDirectory>
        </configuration>
        <executions>
          <execution>
            <id>checkstyle</id>
            <phase>verify</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
          <execution>
            <id>checkstyle-report</id>
            <phase>verify</phase>
            <goals>
              <goal>checkstyle</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.15</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <phase>test</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <source>${maven.compiler.source}</source>
          <encoding>UTF-8</encoding>
          <docencoding>UTF-8</docencoding>
          <charset>UTF-8</charset>
          <failOnError>false</failOnError>
          <doclint>none</doclint>
          <outputDirectory>${project.build.directory}/site</outputDirectory>
        </configuration>
      </plugin>

      <plugin>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs-maven-plugin</artifactId>
        <version>4.10.2.0</version>
        <configuration>
          <effort>Max</effort>             <!-- nível de análise: Min, Default, Max  -->
          <threshold>Low</threshold>       <!-- severidade mínima: High, Medium, Low -->
          <failOnError>false</failOnError> <!-- não falhar build em caso de bugs     -->
          <xmlOutput>true</xmlOutput>      <!-- gera relatório em XML                -->
          <htmlOutput>true</htmlOutput>
        </configuration>
        <executions>
          <execution>
            <phase>verify</phase>
            <goals>
              <goal>spotbugs</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
	
    </plugins>

  </build>

  <!--
  <repositories>
    <repository>
      <id>xwiki</id>
      <name>Maven xwiki Repository</name>
      <url>https://maven.xwiki.org/externals/</url>
    </repository>
  </repositories>
  -->
  
  <organization>
    <name>WagnerSoft - WL</name>
    <url>https://github.com/WagnerSoft-WL</url>
  </organization>

  <developers>
    <developer>
      <id>wagnerlopes</id>
      <name>Wagner Luis Lopes</name>
      <email>wagner.luis.alopes@gmail.com</email>
      <organization>WagnerSoft - WL</organization>
      <organizationUrl>https://wagnerlopes.github.io/</organizationUrl>
      <roles>
        <role>Manager</role>
        <role>Developer</role>
      </roles>
      <url>https://github.com/wagnerlopes</url>
      <timezone>-3</timezone>
    </developer>
  </developers>
	
</project>
